Fix for popups on mobile

--- a/css/styles.less
+++ b/css/styles.less
@@ -150,7 +150,7 @@ header {
     top: 20px;
     left: 20px;
     z-index: 1200;
-    box-shadow: 0 0 20px rgba(0,0,0,0.75);
+    box-shadow: 0 0 10px rgba(0,0,0,0.50);
     background-color: white;
     color: black;
     font-size: 11px;
